# sandboxes

./: AGENTS.md  Cargo.toml  README.md
specs/: README.md
specs/claude/: 16gb-4vcpu.md  README.md
src/: error.rs  lib.rs  models.rs  traits.rs
src/providers/: daytona.rs  mod.rs
tests/: daytona_integration.rs
