[package]
name = "libsandbox"
version = "0.1.0"
edition = "2021"
description = "A universal Rust library for interacting with cloud sandbox providers"
license = "MIT"
repository = "https://github.com/pepicrft/libsandbox"

[features]
default = []
daytona = ["dep:reqwest", "dep:serde", "dep:serde_json"]

[dependencies]
async-trait = "0.1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }

# Optional deps (activated by provider features)
reqwest = { version = "0.12", features = ["json"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
